--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -37,7 +37,7 @@ $select-menu-bg: rgba(0,0,0,.1);
 $darkgrey: #696969;
 $medlightgrey: #8d8d8d;
 $medgrey: #d2d2d2;
-$lightgrey: #eee;
+$lightgrey: #f1f1f1;
 $teal: #dceef8;
 $fg-grey: #f5f5f5;
 $histogramgrey: #c6c6c6;
